gallery/css/styles.css
#gallery {
	margin-top: 2.8em;
	overflow: auto;
	text-align: justify;
}

#gallery > a.album {
	width: 200px;
	background-color: #e8e8e8;
	border-radius: 10px;
	box-shadow: 0 1px 0 white, inset 0 1px 1px #bbb;
	border: 1px solid #eee;
}

#gallery > a.album>label {
	color: white;
	position: absolute;
	bottom: 5px;
	width: 100%;
	text-align: center;
}

#gallery > a {
	display: inline-block;
	height: 200px;
	margin: 1em;
	position: relative;
	vertical-align: top;
	*display: inline;
	zoom: 1;
}

#slideshow-start {
	position: absolute;
	right: 13.5em;
}

#gallery > a.image >img {
	max-height: 200px;
}

